<resources>
    <string name="app_name">Steel Conversion</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="preferences">Preferences</string>
    <string name="change_theme">Themes</string>
    <string name="nav_header_title">Steel Converter</string>
    <string name="nav_image">Nav Image</string>
    <string name="main">Main Page</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="second_activity">Second Activity</string>
    <string name="menuHelp">Help</string>
    <string name="menuExit">Exit App</string>
    <string name="share">Share</string>
    <string name="diameter_mm">Diameter(mm)</string>
    <string name="length_m">Length(m)</string>
    <string name="button">Button</string>
    <string name="diameter">steel diameter</string>
    <string name="length">steel length</string>
    <string name="calculate">Calculate</string>
    <string name="total_weight_kgs">Total Weight (kgs): </string>
    <string name="reset">Reset</string>
    <string name="unit_weight_kgs">Unit Weight (kgs/m): </string>

    <string name="appId">ca-app-pub-3475581997908692~4649071111</string>
    <string name="bannerAd_1">ca-app-pub-3475581997908692/5986203516</string>
    <string name="bannerAd_2">ca-app-pub-3475581997908692/7691813648</string>
    <string name="interstitialAd">ca-app-pub-3475581997908692/4289978461</string>

    <string name="testAppId">ca-app-pub-7266217626843205~2932089409</string>
    <string name="testBannerAd">ca-app-pub-3940256099942544/6300978111</string>
    <string name="testIntestitialAd">ca-app-pub-3940256099942544/1033173712</string>

    <string name="textview">This is a simple app that is useful to estimators or contractors
        in quantifying the amount of steel, given the steel radius and the total length of steel
        . The amount of steel is given in kilograms, and the total length of steel entered is in
        metres. The reinforcement steel is assumed to be mild steel bars with a circular
        cross-section, and the radius entered is in millimetres.
    </string>
    <string name="menuAbout">About</string>
</resources>
