<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"/>

    <item android:id="@+id/change_theme"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/change_theme"/>

    <item android:id="@+id/about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/about"/>

    <item android:id="@+id/help"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/menuHelp"/>

    <item android:id="@+id/share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share"/>

    <item android:id="@+id/exit"
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        android:title="@string/menuExit"/>

</menu>